# xlsql

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: check_unstaged.sh  update_version.py
tests/: __init__.py  test_cli.py
xlsql/: cli.py  version.py
